# youtube-player-bot

./: .gitignore  Makefile  Pipfile  automation.py  pyproject.toml  requirements.txt  style.css
src/: main.py
src/automation/: StepGenerator.py
src/bot/: Bot.py  Filters.py  States.py
src/config/: database.py
src/data/: exchange_rates.py  schedule_days.py
src/database/: Cache.py  Database.py  MongoDB.py
src/dialogs/: AdminDialogs.py  BotDialogs.py  DialogGenerator.py  UserDialogs.py
src/dialogs/data/: commands_list.py
src/languages/: Language.py  Ru.py  Ukr.py
src/messages/: BotMessages.py  InlineKeyboard.py
src/messages/data/: commands_list.py  replies.py
src/users/: Actions.py  InitialUsers.py  NewUser.py  User.py  Users.py  initial_users_list.py  students.py  types.py  users_list.py
src/users/initial/: InitialUsers.py  users_list.py
src/utils/: Dotenv.py  Json.py  Logger.py  Path.py  Time.py
